<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:orientation="vertical" android:background="#b0000000">

	<LinearLayout android:id="@+id/LinearLayout02"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:gravity="center"
		android:paddingLeft="12dp"
		android:paddingRight="12dp"
		android:paddingTop="10dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="100"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:gravity="center"
			android:text="@string/start_timer"
			android:textColor="#ffffff" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="100"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:gravity="center"
			android:text="@string/end_timer"
			android:textColor="#ffffff" />
	</LinearLayout>
    <FrameLayout
		android:layout_width="fill_parent"
	    android:layout_height="150dip"
		>
        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*" >
            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <RelativeLayout
                    android:layout_width="1dip"
                    android:layout_height="150dip">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <com.electric_water_heaters_controller.widget.WheelView
                            android:id="@+id/wheel1"
                            android:layout_width="fill_parent"
                            android:layout_weight="1.0"
                            android:layout_height="150dp"
                            android:layout_marginTop="2dp"
                            />

                        <com.electric_water_heaters_controller.widget.WheelView
                            android:id="@+id/wheel2"
                            android:layout_width="fill_parent"
                            android:layout_weight="1.0"
                            android:layout_height="150dp"
                            android:layout_marginTop="2dp"/>
                    </LinearLayout>
                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="150dip">

                        <View
                            android:id="@+id/view1"
                            android:layout_width="fill_parent"
                            android:layout_height="2px"
                            android:layout_marginLeft="5dip"
                            android:layout_marginTop="50dip"
                            android:background="#000000"/>

                        <View
                            android:id="@+id/view2"
                            android:layout_width="fill_parent"
                            android:layout_height="2px"
                            android:layout_marginLeft="5dip"
                            android:layout_below="@id/view1"
                            android:layout_marginTop="50dip"
                            android:background="#000000"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="150dip"
                        android:gravity="center_vertical"
                        android:layout_gravity="left|center_vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="60dip"
                            android:text="@string/hours"
                            android:textIsSelectable="false"
                            android:textSize="18sp"
                            android:textColor="#ffffff" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="8dip"
                            android:text="@string/mins"
                            android:textSize="18sp"
                            android:textColor="#ffffff" />
                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="1dip"
                    android:layout_height="150dip">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.electric_water_heaters_controller.widget.WheelView
                            android:id="@+id/wheel1_1"
                            android:layout_width="fill_parent"
                            android:layout_weight="1.0"
                            android:layout_height="150dp"
                            android:layout_marginTop="2dp"/>

                        <com.electric_water_heaters_controller.widget.WheelView
                            android:id="@+id/wheel2_1"
                            android:layout_width="fill_parent"
                            android:layout_weight="1.0"
                            android:layout_height="150dp"
                            android:layout_marginTop="2dp"/>
                    </LinearLayout>
                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="150dip"
                        android:layout_gravity="right|center_vertical">

                        <View
                            android:id="@+id/view1_1"
                            android:layout_width="fill_parent"
                            android:layout_height="2px"
                            android:layout_marginLeft="5dip"
                            android:layout_marginTop="50dip"
                            android:background="#000000"/>

                        <View
                            android:id="@+id/view2_1"
                            android:layout_width="fill_parent"
                            android:layout_height="2px"
                            android:layout_marginLeft="5dip"
                            android:layout_below="@id/view1_1"
                            android:layout_marginTop="50dip"
                            android:background="#000000"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="150dip"
                        android:gravity="center_vertical"
                        android:layout_gravity="right|center_vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="60dip"
                            android:text="@string/hours"
                            android:id="@+id/textView"
                            android:textSize="18sp"
                            android:textColor="#ffffff" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="8dip"
                            android:text="@string/mins"
                            android:textSize="18sp"
                            android:textColor="#ffffff" />

                    </RelativeLayout>

                </RelativeLayout>

            </TableRow>
        </TableLayout>
	</FrameLayout>


	<LinearLayout android:id="@+id/LinearLayout01"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:gravity="center">

		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/BtnOK"
			android:layout_weight="100"
			android:text="@string/OK"/>

		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="100"
			android:text="@string/cancel"
			android:id="@+id/BtnCancel"/>
	</LinearLayout>

</LinearLayout>