<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.electric_water_heaters_controller.activity_main">

    <TextView
        android:text=""
        android:layout_width="360dp"
        android:layout_height="90dp"
        android:autoText="false"
        android:enabled="false"
        android:textSize="12dp"
        android:layout_x="0dp"
        android:layout_y="420dp"
        android:id="@+id/TextView01">
    </TextView>

    <Button
        android:id="@+id/Button_In"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="連線"
        android:layout_x="285dp"
        android:layout_y="360dp"
        />

    <Button
        android:id="@+id/Button_On"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="開"
        android:layout_x="0dp"
        android:layout_y="360dp"
        />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="180dip"
        android:layout_gravity="center_horizontal">
        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="*" >
            <TableRow
                android:id="@+id/tableRow0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3_"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="開啟時間"
                    android:id="@+id/textView3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="關閉時間"
                    android:id="@+id/textView4" />

            </TableRow>
            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="48sp"
                    android:layout_gravity="center"
                    android:id="@+id/checkBox"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="00 : 00"
                    android:id="@+id/timer1_start" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="00 : 00"
                    android:id="@+id/timer1_end" />
            </TableRow>
            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="48sp"
                    android:layout_gravity="center"
                    android:id="@+id/checkBox2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="00 : 00"
                    android:id="@+id/timer2_start" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="00 : 00"
                    android:id="@+id/timer2_end" />

            </TableRow>
            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="48sp"
                    android:layout_gravity="center"
                    android:id="@+id/checkBox3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="00 : 00"
                    android:id="@+id/timer3_start" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="00 : 00"
                    android:id="@+id/timer3_end" />

            </TableRow>
        </TableLayout>
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="25dp">
        <RelativeLayout
            android:layout_width="60dip"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="50dip"
                    android:text=""
                    android:id="@+id/Btn_Timer1"
                    android:background="#00000000" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="50dip"
                    android:text=""
                    android:id="@+id/Btn_Timer2"
                    android:background="#00000000" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="50dip"
                    android:text=""
                    android:id="@+id/Btn_Timer3"
                    android:background="#00000000" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="185dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView15"
                android:layout_column="0" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Humidity"
                android:id="@+id/textView"
                android:textSize="16sp"
                android:layout_column="1" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Temperature"
                android:id="@+id/textView1"
                android:textSize="16sp"
                android:layout_column="2" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Heat_index"
                android:id="@+id/textView2"
                android:textSize="16sp"
                android:layout_column="3" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/Humidity"
                android:textSize="16sp"
                android:layout_column="1" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/Temperature"
                android:textSize="16sp"
                android:layout_column="2" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/Heat_index"
                android:textSize="16sp"
                android:layout_column="3" />

        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="進水溫度"
                android:id="@+id/textView_in_water"
                android:textSize="16sp"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="出水溫度"
                android:id="@+id/textView_out_water"
                android:textSize="16sp"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="流量"
                android:id="@+id/textView_water_flow"
                android:textSize="16sp"
                android:layout_column="3" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/water_in"
                android:textSize="16sp"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/water_out"
                android:textSize="16sp"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/water_flow"
                android:textSize="16sp"
                android:layout_column="3" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="電流"
                android:id="@+id/textView_current"
                android:textSize="16sp"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="功率"
                android:id="@+id/textView12"
                android:textSize="16sp"
                android:layout_column="2" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/current_A"
                android:textSize="16sp"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/textView14"
                android:textSize="16sp"
                android:layout_column="2" />
        </TableRow>

    </TableLayout>

</AbsoluteLayout>



